convert model number to string

--- a/Step Four - Preprocessing and Training/04_preprocessing_and_training.ipynb
+++ b/Step Four - Preprocessing and Training/04_preprocessing_and_training.ipynb
@@ -2689,7 +2689,7 @@
        "                 StandardScaler(copy=True, with_mean=True, with_std=True)),\n",
        "                ('selectkbest',\n",
        "                 SelectKBest(k=10,\n",
-       "                             score_func=<function f_regression at 0x7fda0c2b1a70>)),\n",
+       "                             score_func=<function f_regression at 0x7f8acc1afa70>)),\n",
        "                ('linearregression',\n",
        "                 LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
        "                                  normalize=False))],\n",
@@ -2816,7 +2816,7 @@
        "                 StandardScaler(copy=True, with_mean=True, with_std=True)),\n",
        "                ('selectkbest',\n",
        "                 SelectKBest(k=15,\n",
-       "                             score_func=<function f_regression at 0x7fda0c2b1a70>)),\n",
+       "                             score_func=<function f_regression at 0x7f8acc1afa70>)),\n",
        "                ('linearregression',\n",
        "                 LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
        "                                  normalize=False))],\n",
@@ -3093,7 +3093,7 @@
        "                                                       with_std=True)),\n",
        "                                       ('selectkbest',\n",
        "                                        SelectKBest(k=10,\n",
-       "                                                    score_func=<function f_regression at 0x7fda0c2b1a70>)),\n",
+       "                                                    score_func=<function f_regression at 0x7f8acc1afa70>)),\n",
        "                                       ('linearregression',\n",
        "                                        LinearRegression(copy_X=True,\n",
        "                                                         fit_intercept=True,\n",
@@ -3849,7 +3849,7 @@
     "#and the current datetime (`datetime.datetime.now()`) to the `build_datetime` attribute\n",
     "#Let's call this model version '1.0'\n",
     "best_model = rf_grid_cv.best_estimator_\n",
-    "best_model.version = 1.0\n",
+    "best_model.version = '1.0'\n",
     "best_model.pandas_version = pd.__version__\n",
     "best_model.numpy_version = np.__version__\n",
     "best_model.sklearn_version = sklearn_version\n",
@@ -3883,8 +3883,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** In this notebook, we developed, trained and tested models on our data in order ot identify what features were of strongest importance in relation to ticket price. We started by estimating the average price of the training dataset and then built a linear model using the coefficient of determination; our estimated average ticket price, based on our model, gave a $19 margin of error while using the real average as an input to our model gave a $9 margin of error. We then called to the pipeline's fit method and saw that our pipeline was giving results consistent with our non-pipeline results after applying cross-validation. We then try a random forest regressor model which we find the results are consistent with our linear model. Finally, we compare model performance and decide to use the random forest regression model as it has a lower cross-validation mean absolute error and also exhibits less variability."
+    "**A: 1** In this notebook, we developed, trained and tested models on our data in order ot identify what features were of strongest importance in relation to ticket price. We started by estimating the average price of the training dataset and then built a linear model using the coefficient of determination; our estimated average ticket price, based on our model, gave a \\$19 margin of error while using the real average as an input to our model gave a \\$9 margin of error. We then called to the pipeline's fit method and saw that our pipeline was giving results consistent with our non-pipeline results after applying cross-validation. We then try a random forest regressor model which we find the results are consistent with our linear model. Finally, we compare model performance and decide to use the random forest regression model as it has a lower cross-validation mean absolute error and also exhibits less variability."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
